cmake_minimum_required(VERSION 3.15)
project(untitled34)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled34 BAEKJOON_PS/2529/main.cpp BAEKJOON_PS/1339/1339.cpp BAEKJOON_PS/14888/14888.cpp BAEKJOON_PS/14889/14889.cpp BAEKJOON_PS/6603/6603.cpp BAEKJOON_PS/1182/1182.cpp BAEKJOON_PS/14225/14225.cpp BAEKJOON_PS/14500/14500.cpp BAEKJOON_PS/16197/16197.cpp BAEKJOON_PS/16198/16198.cpp BAEKJOON_PS/9663/9663.cpp BAEKJOON_PS/2580/2580.cpp BAEKJOON_PS/1062/1062.cpp BAEKJOON_PS/16928/16928.cpp BAEKJOON_PS/16948/16948.cpp BAEKJOON_PS/9019/9019.cpp BAEKJOON_PS/14502/14502.cpp BAEKJOON_PS/12886/12886.cpp BAEKJOON_PS/1780/1780.cpp BAEKJOON_PS/11729/11729.cpp BAEKJOON_PS/1517/1517.cpp Programmers/sorting_k_Num.swift BAEKJOON_PS/11047/11047.cpp BAEKJOON_PS/1931/1931.cpp)